--- a/trade_prototype-3.ipynb
+++ b/trade_prototype-3.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# all this +/- stuff is only really used for the 'current year MOV' prediction\n",
+    "# all this +/- stuff is only really used for the 'current year MOV' prediction & contract value\n",
     "iv = np.array([72.7 ,  7.28, 18.1 ])\n",
     "\n",
     "def get_mov(x):\n",
@@ -60,9 +60,9 @@
     "\n",
     "# expected mov, weight for players, weight for salary cap space\n",
     "weights = {\n",
-    "0 : ( [-1.019, 0.99] , 1.22 ),\n",
-    "1 : ( [9.559, 0.631] , 2.05 ),\n",
-    "2 : ( [7.214, 0.37] , 3.62 ),\n",
+    "0 : ( [0, 0.99] , 1.22 ),\n",
+    "1 : ( [10.559, 0.753] , 1.74 ),\n",
+    "2 : ( [9.07, 0.476] , 2.92 ),\n",
     "}\n",
     "\n",
     "# draft value\n",
@@ -76,7 +76,8 @@
     "team_mov = [ -0.20384938,   0.3719406,  101.37586688]\n",
     "\n",
     "# salary multiplier\n",
-    "sA = 4.020403849764475"
+    "sA = 4.020403849764475\n",
+    "#sA -= 1.5 # discount it"
    ]
   },
   {
@@ -100,8 +101,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "team = { 'p' : [(22,66,22000,2,0),(22,66,22000,2,0),(22,66,22000,2,0),(22,66,22000,5,0)], #(age,ovr,salary,years_left,draf_val)\n",
+    "team = { 'p' : [(22,66,22000,0),(22,66,22000,1),(22,66,22000,2),(22,66,22000,3)], #(age,ovr,salary,years_left)\n",
     "         'd' : [(1, 0, 8.6),(1, 0, -5.35),(2,0,3),(1,1,3),(2,1,3),(1,2,3),(2,2,3),(1,3,3),(2,3,3),(1,4,3),(2,4,3)] #(round,years_left,team_MOV)\n",
     "       }\n",
     "def get_team_value(team,sCap=90000,minS=750):\n",
@@ -119,34 +127,43 @@
     "    tss = defaultdict(int)\n",
     "    dpars = []\n",
     "\n",
-    "    dpars = []\n",
-    "    for i in range(YEARS_TO_MODEL):\n",
-    "        for age,ovr,con,yrl,draft_v in team['p']:\n",
+    "    \n",
+    "    for age,ovr,con,yrl in team['p']:\n",
+    "        ovr2  =ovr\n",
+    "        povrs = [ovr2]\n",
+    "        for i in range(max(YEARS_TO_MODEL,yrl)):\n",
+    "            ovr2+=age_shift.get(age+i,max_shift)\n",
+    "            povrs.append(ovr2)\n",
+    "        \n",
+    "        pmovs = [o2m[int(np.clip(np.round(ovr2),0,100))] for ovr2 in povrs]\n",
+    "        ccont = [(sCap/3)*min(1,(pmov-r_lvl)/sA) for pmov in pmovs]\n",
+    "        cvals = [c-con for c in ccont]\n",
+    "\n",
+    "        # add existing contract\n",
+    "        for i in range(yrl+1):\n",
+    "            pars[i].append(povrs[i])\n",
     "            tss[i] += con\n",
-    "            ovr2 = ovr\n",
-    "            for j in range(max(0,i-1)):\n",
-    "                ovr2+=age_shift.get(age+j,max_shift)\n",
-    "            pars[i].append(ovr2)\n",
-    "    for age,ovr,con,yrl,draft_v in team['p']:\n",
-    "        if yrl >= YEARS_TO_MODEL:\n",
-    "            #print('yES',(age,ovr,con,yrl))\n",
-    "            ovr2  =ovr\n",
-    "            povrs = [ovr2]\n",
-    "            for j in range(yrl-1):\n",
-    "                ovr2+=age_shift.get(age+j,max_shift)\n",
-    "                povrs.append(ovr2)\n",
-    "            pmovs = [o2m[int(np.clip(np.round(ovr2),0,100))] for ovr2 in povrs]\n",
-    "            ccont = [(sCap/3)*(pmov-r_lvl)/sA for pmov in pmovs]\n",
-    "            cvals = [c-con for c in ccont]\n",
+    "        # add extra years to contract (at fair price)\n",
+    "        if yrl+1 < YEARS_TO_MODEL:\n",
+    "            for i in range(yrl+1,YEARS_TO_MODEL):\n",
+    "                deal = 0.5  # discount on hypothetical resigning\n",
+    "                            # o/w cap space is seen as more valuable\n",
+    "                if ccont[i] > 0: # contract over replacement\n",
+    "                    pars[i].append(povrs[i])\n",
+    "                    tss[i] += deal*ccont[i]\n",
+    "                    #print(ovr,ccont[i])\n",
+    "        # add excess value into 3 years\n",
+    "        if yrl+1 > YEARS_TO_MODEL:\n",
     "            amount_to_add = sum(cvals[YEARS_TO_MODEL:])/YEARS_TO_MODEL\n",
     "            for i  in range(YEARS_TO_MODEL):\n",
     "                tss[i] -= amount_to_add\n",
+    "                \n",
     "    \n",
     "    for yr,p in draft_picks:\n",
     "        dpars.append((0.95**yr)*draftP[1]*np.exp(-draftP[0]*p**draftP[2]))\n",
     "        \n",
-    "    for age,ovr,con,yrl,draft_v in team['p']:\n",
-    "        dpars.append(age_shift_int[age]*draft_v)\n",
+    "    for age,ovr,con,yrl in team['p']:\n",
+    "        dpars.append(age_shift_int[age]*winp_draft(ovr,ovr,age))\n",
     "    \n",
     "    pred_movs = []\n",
     "    for i in range(YEARS_TO_MODEL):\n",
@@ -164,8 +181,8 @@
     "        x = weights.get(i,weights[2])\n",
     "\n",
     "        p_mov = x[1] * (x[0][0] * cap_space + x[0][1] * play_s)\n",
-    "        \n",
     "        pred_movs.append(p_mov)\n",
+    "        #print(i,play_s,cap_space)\n",
     "        \n",
     "    cA,cB = (.47854580217902276, -4.016030120527145)\n",
     "\n",
@@ -173,7 +190,7 @@
     "\n",
     "    # discount factor for the future, more uncertainty, less sure reward\n",
     "    value = [wp*(0.95**(i)) for i,wp in enumerate(win_p)]\n",
-    "    #print(sum(value),sum(dpars))\n",
+    "    #print(pred_movs,win_p,sum(value),sum(dpars))\n",
     "    return sum(value) + sum(dpars)\n",
     "get_team_value(team,90000,750)"
    ]
@@ -218,7 +235,7 @@
     "        dp = p['draft']['pick'] + 30 * (p['draft']['round']-1)\n",
     "        if dp < 0:\n",
     "            dp = 61\n",
-    "        team_players[p['tid']].append((age,ovr,salary,years_left,draftP[1]*np.exp(-draftP[0]*dp**draftP[2])))\n",
+    "        team_players[p['tid']].append((age,ovr,salary,years_left))\n",
     "        team_injuries[p['tid']].append(p['injury']['gamesRemaining'])"
    ]
   },
@@ -269,7 +286,7 @@
    "source": [
     "teams_vals = []\n",
     "for i in range(len(data['teams'])):\n",
-    "    #print(team_names[i])\n",
+    "    print(team_names[i])\n",
     "    val = get_team_value({'mov':team_movs[i],'p':team_players[i],'d':team_picks[i]},sCap,minS)\n",
     "    teams_vals.append((val,team_names[i]))"
    ]
@@ -439,110 +456,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_test = {'mov':team_movs[7],'d':team_picks[7],'p':team_players[7]}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_team_value(team_test,sCap,minS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "team_test2 = {'mov': -5.482382353981168,\n",
-    " 'd': [(1, 0, -5.482382353981168),\n",
-    "  (2, 0, -5.482382353981168),\n",
-    "  (2, 0, 9.085203576451224),\n",
-    "  (1, 1, -5.482382353981168),\n",
-    "  (2, 1, -5.076082713949978),\n",
-    "  (2, 1, 4.0382054499133755),\n",
-    "  (1, 2, -5.482382353981168),\n",
-    "  (2, 2, -5.482382353981168),\n",
-    "  (2, 2, -5.076082713949978),\n",
-    "  (1, 3, -5.482382353981168),\n",
-    "  (2, 3, -5.482382353981168),\n",
-    "  (2, 3, -7.647603332074514),\n",
-    "  (1, 4, -5.482382353981168),\n",
-    "  (2, 4, -5.482382353981168),\n",
-    "  (1, 5, -5.482382353981168),\n",
-    "  (2, 5, -5.482382353981168),\n",
-    "  (2, 5, -0.6651492516752459),\n",
-    "  (1, 6, -5.482382353981168),\n",
-    "  (2, 6, -5.482382353981168),\n",
-    "  (2, 6, -5.051141623873145)],\n",
-    " 'p': [(31, 50, 13350, 2, 0.007400055732949782),\n",
-    "  (26, 58, 17500, 3, 0.036373312235063106),\n",
-    "  (32, 43, 19000, 0, 0.05087529943560001),\n",
-    "  (43, 36, 2500, 0, 0.13997323937839157),\n",
-    "  (25, 27, 1700, 1, 0.007400055732949782),\n",
-    "  (22, 31, 1550, 2, 0.023156748165624817),\n",
-    "  (23, 25, 950, 1, 0.007400055732949782),\n",
-    "  (21, 51, 4850, 3, 0.09192940831774696),\n",
-    "  (22, 56, 4250, 2, 0.05087529943560001),\n",
-    "  (22, 58, 6650, 2, 0.13997323937839157),\n",
-    "  (23, 52, 8050, 3, 0.15481216217313457),\n",
-    "  (23, 59, 4150, 1, 0.05087529943560001),\n",
-    "  (27, 39, 1500, 0, 0.007400055732949782),\n",
-    "  (26, 43, 2600, 0, 0.04531599594096907),\n",
-    "  (24, 47, 2350, 0, 0.031108243072596267),\n",
-    "  (25, 42, 1600, 0, 0.02812560393241915)]}\n",
-    "get_team_value(team_test2,sCap,minS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "team_test2 = {'mov': -5.482382353981168,\n",
-    " 'd': [\n",
-    "  (2, 0, -5.482382353981168),\n",
-    "  (2, 0, 9.085203576451224),\n",
-    "  (1, 1, -5.482382353981168),\n",
-    "  (2, 1, -5.076082713949978),\n",
-    "  (2, 1, 4.0382054499133755),\n",
-    "  (1, 2, -5.482382353981168),\n",
-    "  (2, 2, -5.482382353981168),\n",
-    "  (2, 2, -5.076082713949978),\n",
-    "  (1, 3, -5.482382353981168),\n",
-    "  (2, 3, -5.482382353981168),\n",
-    "  (2, 3, -7.647603332074514),\n",
-    "  (1, 4, -5.482382353981168),\n",
-    "  (2, 4, -5.482382353981168),\n",
-    "  (1, 5, -5.482382353981168),\n",
-    "  (2, 5, -5.482382353981168),\n",
-    "  (2, 5, -0.6651492516752459),\n",
-    "  (1, 6, -5.482382353981168),\n",
-    "  (2, 6, -5.482382353981168),\n",
-    "  (2, 6, -5.051141623873145)],\n",
-    " 'p': [(31, 50, 13350, 2, 0.007400055732949782),\n",
-    "  (26, 58, 17500, 3, 0.036373312235063106),\n",
-    "  (32, 43, 19000, 0, 0.05087529943560001),\n",
-    "  (43, 36, 2500, 0, 0.13997323937839157),\n",
-    "  (25, 27, 1700, 1, 0.007400055732949782),\n",
-    "  (22, 31, 1550, 2, 0.023156748165624817),\n",
-    "  (23, 25, 950, 1, 0.007400055732949782),\n",
-    "  (21, 51, 4850, 3, 0.09192940831774696),\n",
-    "  (22, 56, 4250, 2, 0.05087529943560001),\n",
-    "  (22, 58, 6650, 2, 0.13997323937839157),\n",
-    "  (23, 52, 8050, 3, 0.15481216217313457),\n",
-    "  (23, 59, 4150, 1, 0.05087529943560001),\n",
-    "  (27, 39, 1500, 0, 0.007400055732949782),\n",
-    "  (26, 43, 2600, 0, 0.04531599594096907),\n",
-    "  (24, 47, 2350, 0, 0.031108243072596267),\n",
-    "  (25, 42, 1600, 0, 0.02812560393241915)]}\n",
-    "get_team_value(team_test2,sCap,minS)"
+    "team_test = {'mov':team_movs[7],'d':team_picks[7],'p':team_players[7]}\n",
+    "get_team_value(team_test,sCap,minS)\n"
    ]
   },
   {
@@ -561,36 +476,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_test2 = {'mov': -5.051141623873145,\n",
-    " 'd': [(2, 0, 1.5294398686913402),\n",
-    "  (2, 0, -0.11763123883654236),\n",
-    "  (2, 1, 4.253735265080072),\n",
-    "  (1, 1, -5.051141623873145),\n",
-    "  (1, 1, -3.4271516708022802),\n",
-    "  (2, 1, -3.4271516708022802),\n",
-    "  (1, 2, -5.051141623873145),\n",
-    "  (2, 2, -5.051141623873145),\n",
-    "  (2, 2, 6.640651174426148),\n",
-    "  (1, 3, -5.051141623873145),\n",
-    "  (1, 5, -5.051141623873145),\n",
-    "  (2, 5, -5.051141623873145),\n",
-    "  (1, 6, -5.051141623873145)],\n",
-    " 'p': [(24, 51, 4800, 2, 0.02812560393241915),\n",
-    "  (24, 55, 1650, 2, 0.01680073169357861),\n",
-    "  (25, 59, 29550, 3, 0.22846896618569987),\n",
-    "  (27, 22, 1650, 2, 0.007400055732949782),\n",
-    "  (21, 25, 3900, 3, 0.031108243072596267),\n",
-    "  (30, 59, 20200, 4, 0.022088150606323197),\n",
-    "  (30, 64, 38000, 4, 0.08541509934145018),\n",
-    "  (32, 68, 40250, 2, 0.11675830647455769),\n",
-    "  (26, 26, 1650, 2, 0.007400055732949782),\n",
-    "  (23, 46, 1800, 1, 0.10742693347018893),\n",
-    "  (27, 26, 100, 0, 0.007400055732949782),\n",
-    "  (20, 33, 1750, 3, 0.018372688753582653),\n",
-    "  (23, 38, 200, 0, 0.15481216217313457),\n",
-    "  (28, 38, 1850, 2, 0.007400055732949782),\n",
-    "  (23, 29, 1650, 2, 0.007400055732949782)]}\n",
-    "get_team_value(team_test2,sCap,minS)"
+    "team_test = {'mov':team_movs[17],'d':team_picks[17],'p':team_players[17]}\n",
+    "\n",
+    "get_team_value(team_test,sCap,minS)\n"
    ]
   },
   {
@@ -599,97 +487,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_test = {'mov':team_movs[22],'d':team_picks[22],'p':team_players[22]}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "team_test = {'mov': 1.5294398686913402,\n",
-    " 'd': [(1, 0, 1.5294398686913402),\n",
-    "  (2, 0, -5.051141623873145),\n",
-    "  (2, 1, 1.5294398686913402),\n",
-    "  (1, 2, 1.5294398686913402),\n",
-    "  (2, 2, 1.5294398686913402),\n",
-    "  (2, 3, 1.5294398686913402),\n",
-    "  (2, 3, 4.0382054499133755),\n",
-    "  (1, 4, 1.5294398686913402),\n",
-    "  (2, 4, 1.5294398686913402),\n",
-    "  (1, 5, 1.5294398686913402),\n",
-    "  (2, 5, 1.5294398686913402),\n",
-    "  (1, 6, 1.5294398686913402),\n",
-    "  (2, 6, 1.5294398686913402)],\n",
-    " 'p': [(32, 48, 5600, 1, 0.007400055732949782),\n",
-    "  (23, 26, 900, 1, 0.007400055732949782),\n",
-    "  (29, 52, 10050, 3, 0.014115227391274273),\n",
-    "  (27, 46, 2250, 1, 0.12747982320989207),\n",
-    "  (25, 66, 31650, 4, 0.15481216217313457),\n",
-    "  (27, 44, 13000, 0, 0.19608449676058912),\n",
-    "  (28, 54, 8500, 3, 0.007400055732949782),\n",
-    "  (21, 66, 8100, 2, 0.17293338922302573),\n",
-    "  (26, 26, 900, 1, 0.007400055732949782),\n",
-    "  (35, 38, 12000, 0, 0.042834501080659414),\n",
-    "  (36, 41, 3650, 0, 0.007400055732949782),\n",
-    "  (28, 56, 17750, 1, 0.038378007300704536),\n",
-    "  (28, 36, 1900, 0, 0.09921659340181611),\n",
-    "  (30, 48, 8000, 3, 0.007400055732949782),\n",
-    "  (24, 44, 1550, 2, 0.024289644129968053),\n",
-    "  (28, 55, 9000, 2, 0.047989461040794185),\n",
-    "  (25, 48, 5050, 1, 0.06506895926938651),\n",
-    "  (27, 58, 4000, 2, 0.007400055732949782)]}\n",
+    "team_test = {'mov': -0.11763123883654236,\n",
+    " 'd': [(1, 0, -0.11763123883654236),\n",
+    "  (1, 1, -0.11763123883654236),\n",
+    "  (1, 2, -0.11763123883654236),\n",
+    "  (2, 2, -0.11763123883654236),\n",
+    "  (1, 3, -0.11763123883654236),\n",
+    "  (2, 3, -0.11763123883654236),\n",
+    "  (1, 4, -0.11763123883654236),\n",
+    "  (2, 4, -0.11763123883654236),\n",
+    "  (1, 5, -0.11763123883654236),\n",
+    "  (2, 5, -0.11763123883654236),\n",
+    "  (1, 6, -0.11763123883654236),\n",
+    "  (2, 6, -0.11763123883654236)],\n",
+    " 'p': [(28, 54, 12500, 0),\n",
+    "  (24, 50, 1750, 0),\n",
+    "  (24, 24, 900, 0),\n",
+    "  (23, 26, 1500, 1),\n",
+    "  (31, 33, 5700, 1),\n",
+    "  (33, 60, 30500, 1),\n",
+    "  (23, 31, 750, 0),\n",
+    "  (28, 60, 24200, 1),\n",
+    "  (33, 60, 12800, 2),\n",
+    "  (23, 33, 1650, 2),\n",
+    "  (23, 24, 900, 1),\n",
+    "  (26, 20, 1600, 2),\n",
+    "  (31, 60, 18300, 3),\n",
+    "  (27, 50, 9000, 4),\n",
+    "  (27, 35, 1650, 1),\n",
+    "  (22, 43, 3550, 1)]}\n",
     "get_team_value(team_test,sCap,minS)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "team_test = {'mov': 1.5294398686913402,\n",
-    " 'd': [(1, 0, 1.5294398686913402),\n",
-    "  (2, 0, -5.051141623873145),\n",
-    "  (2, 1, 1.5294398686913402),\n",
-    "  (1, 2, 1.5294398686913402),\n",
-    "  (2, 2, 1.5294398686913402),\n",
-    "  (2, 3, 1.5294398686913402),\n",
-    "  (2, 3, 4.0382054499133755),\n",
-    "  (1, 4, 1.5294398686913402),\n",
-    "  (2, 4, 1.5294398686913402),\n",
-    "  (1, 5, 1.5294398686913402),\n",
-    "  (2, 5, 1.5294398686913402),\n",
-    "  (1, 6, 1.5294398686913402),\n",
-    "  (2, 6, 1.5294398686913402)],\n",
-    " 'p': [(32, 48, 5600, 1, 0.007400055732949782),\n",
-    "  (23, 26, 900, 1, 0.007400055732949782),\n",
-    "  (29, 52, 10050, 3, 0.014115227391274273),\n",
-    "  (27, 46, 2250, 1, 0.12747982320989207),\n",
-    "  (25, 66, 31650, 4, 0.15481216217313457),\n",
-    "  (27, 44, 13000, 0, 0.19608449676058912),\n",
-    "  (28, 54, 8500, 3, 0.007400055732949782),\n",
-    "  (21, 66, 8100, 2, 0.17293338922302573),\n",
-    "  (26, 26, 900, 1, 0.007400055732949782),\n",
-    "  (35, 38, 12000, 0, 0.042834501080659414),\n",
-    "  (36, 41, 3650, 0, 0.007400055732949782),\n",
-    "  (28, 56, 17750, 1, 0.038378007300704536),\n",
-    "  (28, 36, 1900, 0, 0.09921659340181611),\n",
-    "  (30, 48, 8000, 3, 0.007400055732949782),\n",
-    "  (24, 44, 1550, 2, 0.024289644129968053),\n",
-    "  (28, 55, 9000, 2, 0.047989461040794185),\n",
-    "  (25, 48, 5050, 1, 0.06506895926938651),\n",
-    "  (27, 58, 4000, 2, 0.007400055732949782)]}\n",
-    "get_team_value(team_test,sCap,minS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
