--- a/trade_models-3.ipynb
+++ b/trade_models-3.ipynb
@@ -38,6 +38,8 @@
     "player_born = {}\n",
     "player_seasons = defaultdict(int)\n",
     "contracts = {}\n",
+    "full_contracts =  {}\n",
+    "player_teams = {}\n",
     "draft_picks = defaultdict(list)\n",
     "player_draft_ageovr = {}\n",
     "draft_salaries = {}\n",
@@ -62,9 +64,14 @@
     "        player_ratings[(p['pid'],r['season'])] ={k:v for k,v in r.items() if type(v) == int and k != 'season'}\n",
     "    \n",
     "    for r in p['stats']:\n",
+    "        if r['playoffs']:\n",
+    "            continue\n",
     "        team_players[(r['tid'],r['season'])].add(p['pid'])\n",
+    "        player_teams[(p['pid'],r['season'])] = r['tid']\n",
     "        \n",
     "    td = {s['season']: s['amount'] for s in p['salaries']}\n",
+    "    for k,a in td.items():\n",
+    "        full_contracts[(p['pid'],k)] = a\n",
     "    new_c = {s:td[s+1] for s in td if s+1 in td and td[s+1]!=td[s]}\n",
     "\n",
     "    for s,c in new_c.items():\n",
@@ -499,7 +506,7 @@
     "import scipy.optimize as opt\n",
     "import cma\n",
     "\n",
-    "es = cma.CMAEvolutionStrategy(iv,0.5, {'tolx':1e-6,'tolfun':1e-6,'maxfevals':1000})\n",
+    "es = cma.CMAEvolutionStrategy(iv,0.5, {'tolx':1e-6,'tolfun':1e-6,'maxfevals':1})\n",
     "es.optimize(get_rating)"
    ]
   },
@@ -651,31 +658,17 @@
     "        tss = defaultdict(int)\n",
     "\n",
     "        dpars = []\n",
-    "        for i in range(YEARS_TO_MODEL):\n",
-    "            for pid in team_players[(tid,s)]:\n",
-    "                if (pid,s) in contracts and contracts[(pid,s)][1] >= i:\n",
-    "                    tss[i] += contracts[(pid,s)][0]\n",
-    "                    age = s-player_born[pid]\n",
-    "                    ovr = player_ratings[(pid,s)]['ovr']\n",
-    "                    for j in range(max(0,i-1)):\n",
-    "                        ovr+=age_shift.get(age+j,max_shift)\n",
-    "                    pars[i].append(ovr)\n",
     "        for pid in team_players[(tid,s)]:\n",
-    "            if (pid,s) in contracts and contracts[(pid,s)][1] >= YEARS_TO_MODEL:\n",
-    "                age = s-player_born[pid]\n",
-    "                \n",
-    "                ovr2 = player_ratings[(pid,s)]['ovr']\n",
-    "                povrs = [ovr2]\n",
-    "                for j in range(contracts[(pid,s)][1]-1):\n",
-    "                    ovr2+=age_shift.get(age+j,max_shift)\n",
-    "                    povrs.append(ovr2)\n",
-    "                pmovs = [mov[int(np.clip(np.round(ovr2),0,100))] for ovr2 in povrs]\n",
-    "                ccont = [30000*(pmov-r_lvl)/sA for pmov in pmovs]\n",
-    "                cvals = [c-contracts[(pid,s)][0] for c in ccont]\n",
-    "                amount_to_add = sum(cvals[YEARS_TO_MODEL:])/YEARS_TO_MODEL\n",
-    "                for i  in range(YEARS_TO_MODEL):\n",
-    "                    tss[i] -= amount_to_add\n",
-    "                    \n",
+    "            age = s-player_born[pid]\n",
+    "            ovr = player_ratings[(pid,s)]['ovr']\n",
+    "            pars[0].append(ovr)\n",
+    "            tss[0] += full_contracts.get((pid,s),750)\n",
+    "            for j in range(1,YEARS_TO_MODEL):\n",
+    "                ovr+=age_shift.get(age+j,max_shift)\n",
+    "                if (pid,s+j) in player_teams and player_teams[(pid,s+j)] == tid:\n",
+    "                    pars[j].append(ovr)\n",
+    "                    tss[j]+=full_contracts.get((pid,s+j),750)\n",
+    "            \n",
     "        for i in range(YEARS_TO_MODEL):\n",
     "            tmov = team_movs[(tid,s+i)]\n",
     "            play = [p for p in pars[i] if p >= RL]\n",
@@ -701,6 +694,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "{k:len(v) for k,v in pars.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tid,s,j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#data['players'][282]#['salaries']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "np.set_printoptions(suppress=True)\n",
     "scales=[]\n",
     "rsq = [] \n",
@@ -718,7 +738,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[0.6356287420262297, 0.2814157259822434, 0.1303198654171429]"
+    "[0.6729047387737562, 0.3342707498346743, 0.12338779843176773]"
    ]
   },
   {
@@ -829,6 +849,27 @@
    "source": [
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
