--- a/trade_prototype-3.ipynb
+++ b/trade_prototype-3.ipynb
@@ -146,11 +146,10 @@
     "        # add extra years to contract (at fair price)\n",
     "        if yrl+1 < YEARS_TO_MODEL:\n",
     "            for i in range(yrl+1,YEARS_TO_MODEL):\n",
-    "                deal = 0.5  # discount on hypothetical resigning\n",
-    "                            # o/w cap space is seen as more valuable\n",
-    "                if ccont[i] > 0: # contract over replacement\n",
+    "                x = weights[i]\n",
+    "                if (pmovs[i])*x[0][1] > ccont[i]*x[0][0]/sCap:\n",
     "                    pars[i].append(povrs[i])\n",
-    "                    tss[i] += deal*ccont[i]\n",
+    "                    tss[i] += ccont[i]\n",
     "                    #print(ovr,ccont[i])\n",
     "        # add excess value into 3 years\n",
     "        if yrl+1 > YEARS_TO_MODEL:\n",
@@ -476,7 +475,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_test = {'mov':team_movs[17],'d':team_picks[17],'p':team_players[17]}\n",
+    "team_test = {'mov':team_movs[29],'d':team_picks[29],'p':team_players[29]}\n",
     "\n",
     "get_team_value(team_test,sCap,minS)\n"
    ]
@@ -487,35 +486,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_test = {'mov': -0.11763123883654236,\n",
-    " 'd': [(1, 0, -0.11763123883654236),\n",
-    "  (1, 1, -0.11763123883654236),\n",
-    "  (1, 2, -0.11763123883654236),\n",
-    "  (2, 2, -0.11763123883654236),\n",
-    "  (1, 3, -0.11763123883654236),\n",
-    "  (2, 3, -0.11763123883654236),\n",
-    "  (1, 4, -0.11763123883654236),\n",
-    "  (2, 4, -0.11763123883654236),\n",
-    "  (1, 5, -0.11763123883654236),\n",
-    "  (2, 5, -0.11763123883654236),\n",
-    "  (1, 6, -0.11763123883654236),\n",
-    "  (2, 6, -0.11763123883654236)],\n",
-    " 'p': [(28, 54, 12500, 0),\n",
-    "  (24, 50, 1750, 0),\n",
-    "  (24, 24, 900, 0),\n",
-    "  (23, 26, 1500, 1),\n",
-    "  (31, 33, 5700, 1),\n",
-    "  (33, 60, 30500, 1),\n",
-    "  (23, 31, 750, 0),\n",
-    "  (28, 60, 24200, 1),\n",
-    "  (33, 60, 12800, 2),\n",
-    "  (23, 33, 1650, 2),\n",
-    "  (23, 24, 900, 1),\n",
-    "  (26, 20, 1600, 2),\n",
-    "  (31, 60, 18300, 3),\n",
-    "  (27, 50, 9000, 4),\n",
-    "  (27, 35, 1650, 1),\n",
-    "  (22, 43, 3550, 1)]}\n",
+    "team_test ={'mov': -7.647603332074514,\n",
+    " 'd': [(2, 0, -0.6651492516752459),\n",
+    "  (1, 0, -7.647603332074514),\n",
+    "  (2, 0, -5.076082713949978),\n",
+    "  (2, 1, -0.6651492516752459),\n",
+    "  (1, 1, -7.647603332074514),\n",
+    "  (2, 1, 10.026649251671481),\n",
+    "  (1, 2, -7.647603332074514),\n",
+    "  (2, 2, -7.647603332074514),\n",
+    "  (1, 3, -7.647603332074514),\n",
+    "  (1, 4, -7.647603332074514),\n",
+    "  (2, 4, -7.647603332074514),\n",
+    "  (1, 5, -7.647603332074514),\n",
+    "  (2, 5, -7.647603332074514),\n",
+    "  (1, 6, -7.647603332074514),\n",
+    "  (2, 6, -7.647603332074514)],\n",
+    " 'p': [(25, 52, 1500, 2),\n",
+    "  (26, 54, 18900, 2),\n",
+    "  (28, 52, 14000, 1),\n",
+    "  (28, 33, 17000, 0),\n",
+    "  (22, 54, 4450, 3),\n",
+    "  (25, 26, 1650, 2),\n",
+    "  (23, 31, 900, 0),\n",
+    "  (22, 29, 1750, 3),\n",
+    "  (22, 52, 4100, 2),\n",
+    "  (25, 40, 1350, 1),\n",
+    "  (25, 22, 160, 0),\n",
+    "  (32, 43, 24000, 1),\n",
+    "  (22, 47, 3950, 1),\n",
+    "  (26, 39, 1500, 0),\n",
+    "  (23, 26, 900, 1),\n",
+    "  (25, 43, 1500, 0)]}\n",
     "get_team_value(team_test,sCap,minS)"
    ]
   },
