--- a/make_rookie_sim.ipynb
+++ b/make_rookie_sim.ipynb
@@ -165,13 +165,16 @@
     "ply_lookup = {}\n",
     "ply_ratings = []\n",
     "\n",
+    "extra_players = []\n",
+    "\n",
     "for k,v in college_teams.items():\n",
     "    if len(v) < 10:\n",
     "        continue\n",
     "    ply = sorted([(p['ratings'][0]['ovr'],random.random(),p) for p in v])\n",
     "    pi = [j for j,_ in enumerate(ply)]\n",
-    "    p = stable_softmax(3e-1*np.array([_[0] for _ in ply]))\n",
-    "    idx = np.random.choice(pi,10,False,p)\n",
+    "    p = stable_softmax(3e-2*np.array([_[0] for _ in ply]))\n",
+    "    \n",
+    "    idx = np.random.choice(pi,10,False)\n",
     "    \n",
     "    for j in idx:\n",
     "        p = ply[j][2]\n",
@@ -180,7 +183,20 @@
     "        ply_lookup[i] = p\n",
     "        ply_ratings.append([p['ratings'][0][k] for k in rt])\n",
     "        i+=1\n",
-    "        output['players'].append(p)"
+    "        output['players'].append(p)\n",
+    "    for j in pi:\n",
+    "        if j in idx:\n",
+    "            continue\n",
+    "        extra_players.append(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(extra_players)"
    ]
   },
   {
@@ -224,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 2\n",
+    "N = 3\n",
     "u,s,v = np.linalg.svd(A,full_matrices=False)\n",
     "v[N:] = 0\n",
     "#s[N:] = 1e-9\n",
@@ -237,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "score = (A @ v.T)@np.diag(1/s)"
+    "score = (A @ (v.T)@np.diag(1/s))"
    ]
   },
   {
@@ -246,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data2 = json.load(open('results_league.json','rt',encoding='utf-8-sig'))"
+    "data2 = json.load(open('realbad.json','rt',encoding='utf-8-sig'))"
    ]
   },
   {
@@ -254,7 +270,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "printd = {}\n",
+    "tmp = ((v.T)@np.diag(1/s))[:,:3]\n",
+    "for name,row in zip(rt,tmp):\n",
+    "    printd[name] = list(row)\n",
+    "#print(json.dumps(printd,indent=True))"
+   ]
   },
   {
    "cell_type": "code",
@@ -274,15 +296,20 @@
     "        r = np.array([p['ratings'][0][k] for k in rt])\n",
     "        pca = ((r @ v.T) @ (np.diag(1/s)))[:N]\n",
     "        stats = p['stats'][0]\n",
-    "\n",
-    "        X.append([100*f,age] + list(pca))\n",
-    "\n",
+    "        if stats['min'] < 850:\n",
+    "            continue\n",
+    "        if stats['gs'] < 40:\n",
+    "            continue   \n",
+    "        #100*f\n",
     "        y.append([stats[s]/stats['gp'] for s in stats_to_pred] + [stats['per']])\n",
+    "\n",
+    "        X.append(list(pca))\n",
+    "\n",
     "    except:\n",
     "        pass\n",
     "X = np.array(X)\n",
     "y = np.array(y)\n",
-    "X.shape"
+    "X.shape,y.shape"
    ]
   },
   {
@@ -305,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fexp = preprocessing.PolynomialFeatures(degree=2,interaction_only=False)\n",
+    "fexp = preprocessing.PolynomialFeatures(degree=1,interaction_only=False)\n",
     "scalerX = preprocessing.StandardScaler()\n",
     "scalery = preprocessing.StandardScaler()\n",
     "\n",
@@ -330,9 +357,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf.fit(prescale_X,y)\n",
-    "res = clf.predict(prescale_X)\n",
+    "clf.fit(X,y)\n",
+    "res = clf.predict(X)\n",
     "np.linalg.norm(res-np.array(y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf.predict(np.array(  [ -0.005647817868185792, 0.005709440253439957, -0.0017545444845067665 ])[None,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for s,cl in zip(stats_to_pred,clf.estimators_):\n",
+    "    print(s,':',list(np.round(list(cl.coef_)+[cl.intercept_],3)),',')"
    ]
   },
   {
@@ -347,7 +393,9 @@
     "    plt.subplot(3,3,i+1)\n",
     "    plt.title(s)\n",
     "    plt.grid(True)\n",
-    "    plt.scatter(y[:,i],res[:,i],s=5,alpha=0.7)\n",
+    "    plt.scatter(y[X[:,0] <= 1,i],res[X[:,0] <= 1,i],s=5,alpha=0.7)\n",
+    "    plt.scatter(y[X[:,0] > 1,i],res[X[:,0] > 1,i],s=15,alpha=0.7)\n",
+    "\n",
     "plt.suptitle('predicting college stats\\n kinda',y=1.05,size=14)\n",
     "plt.tight_layout()\n"
    ]
@@ -358,7 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf.estimators_[0].coef_"
+    "clf.estimators_[4].coef_.shape"
    ]
   },
   {
