--- a/make_rookie_sim.ipynb
+++ b/make_rookie_sim.ipynb
@@ -299,9 +299,10 @@
     "        if stats['min'] < 850:\n",
     "            continue\n",
     "        if stats['gs'] < 40:\n",
-    "            continue   \n",
-    "        #100*f\n",
-    "        y.append([stats[s]/stats['gp'] for s in stats_to_pred] + [stats['per']])\n",
+    "            continue\n",
+    "        stats_v = [36*(stats[s]/stats['gp'])/(stats['min']/stats['gp']) for s in stats_to_pred] + [stats['per']]\n",
+    "        \n",
+    "        y.append(stats_v)\n",
     "\n",
     "        X.append(list(pca))\n",
     "\n",
