--- a/trade_prototype-3.ipynb
+++ b/trade_prototype-3.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import numpy as np\n",
     "from collections import defaultdict\n",
-    "import json"
+    "import json\n",
+    "import copy"
    ]
   },
   {
@@ -112,58 +113,9 @@
     "team = { 'p' : [(22,66,22000,0),(22,66,22000,1),(22,66,22000,2),(22,66,22000,3)], #(age,ovr,salary,years_left)\n",
     "         'd' : [(1, 0, 8.6),(1, 0, -5.35),(2,0,3),(1,1,3),(2,1,3),(1,2,3),(2,2,3),(1,3,3),(2,3,3),(1,4,3),(2,4,3)] #(round,years_left,team_MOV)\n",
     "       }\n",
-    "def get_team_value(team,sCap=90000,minS=750):\n",
-    "    YEARS_TO_MODEL = 3\n",
-    "    teamNum = 30\n",
-    "    \n",
-    "    # turn mov into draft pick and future mov\n",
-    "    m2pos = lambda x: int(round(np.clip( (teamNum-1)/(1+np.exp(0.0048 - 0.4037*(x))),0,teamNum-1)))\n",
-    "    m2next = lambda year,mov: [1,0.5,0.25,0.08,0.03,0.01,0.01,0.01,0.01,0.01][year]*mov \n",
+    "YEARS_TO_MODEL = 3\n",
     "\n",
-    "    # turn draft picks into specific predictions\n",
-    "    draft_picks = [ (yr,m2pos(m2next(yr,mov))+teamNum*(rnd-1)) for rnd,yr,mov in team['d']]\n",
-    "    \n",
-    "    pars = defaultdict(list)\n",
-    "    tss = defaultdict(int)\n",
-    "    dpars = []\n",
-    "\n",
-    "    \n",
-    "    for age,ovr,con,yrl in team['p']:\n",
-    "        ovr2  =ovr\n",
-    "        povrs = [ovr2]\n",
-    "        for i in range(max(YEARS_TO_MODEL,yrl)):\n",
-    "            ovr2+=age_shift.get(age+i,max_shift)\n",
-    "            povrs.append(ovr2)\n",
-    "        \n",
-    "        pmovs = [o2m[int(np.clip(np.round(ovr2),0,100))] for ovr2 in povrs]\n",
-    "        ccont = [(sCap/3)*min(1,(pmov-r_lvl)/sA) for pmov in pmovs]\n",
-    "        cvals = [c-con for c in ccont]\n",
-    "\n",
-    "        # add existing contract\n",
-    "        for i in range(yrl+1):\n",
-    "            pars[i].append(povrs[i])\n",
-    "            tss[i] += con\n",
-    "        # add extra years to contract (at fair price)\n",
-    "        if yrl+1 < YEARS_TO_MODEL:\n",
-    "            for i in range(yrl+1,YEARS_TO_MODEL):\n",
-    "                x = weights[i]\n",
-    "                if (pmovs[i])*x[0][1] > ccont[i]*x[0][0]/sCap:\n",
-    "                    pars[i].append(povrs[i])\n",
-    "                    tss[i] += ccont[i]\n",
-    "                    #print(ovr,ccont[i])\n",
-    "        # add excess value into 3 years\n",
-    "        if yrl+1 > YEARS_TO_MODEL:\n",
-    "            amount_to_add = sum(cvals[YEARS_TO_MODEL:])/YEARS_TO_MODEL\n",
-    "            for i  in range(YEARS_TO_MODEL):\n",
-    "                tss[i] -= amount_to_add\n",
-    "                \n",
-    "    \n",
-    "    for yr,p in draft_picks:\n",
-    "        dpars.append((0.95**yr)*draftP[1]*np.exp(-draftP[0]*p**draftP[2]))\n",
-    "        \n",
-    "    for age,ovr,con,yrl in team['p']:\n",
-    "        dpars.append(age_shift_int[age]*winp_draft(ovr,ovr,age))\n",
-    "    \n",
+    "def eval_state(pars,tss,sCap,minS):\n",
     "    pred_movs = []\n",
     "    for i in range(YEARS_TO_MODEL):\n",
     "        play = [p for p in pars[i] if p >= RL]\n",
@@ -182,13 +134,83 @@
     "        p_mov = x[1] * (x[0][0] * cap_space + x[0][1] * play_s)\n",
     "        pred_movs.append(p_mov)\n",
     "        #print(i,play_s,cap_space)\n",
-    "        \n",
+    "\n",
     "    cA,cB = (.47854580217902276, -4.016030120527145)\n",
     "\n",
     "    win_p = [1.0/(1+np.exp(-mov*cA -cB)) for mov in pred_movs]\n",
     "\n",
     "    # discount factor for the future, more uncertainty, less sure reward\n",
     "    value = [wp*(0.95**(i)) for i,wp in enumerate(win_p)]\n",
+    "    return value\n",
+    "\n",
+    "\n",
+    "def get_team_value(team,sCap=90000,minS=750,teamNum=30):\n",
+    "   \n",
+    "    # turn mov into draft pick and future mov\n",
+    "    m2pos = lambda x: int(round(np.clip( (teamNum-1)/(1+np.exp(0.0048 - 0.4037*(x))),0,teamNum-1)))\n",
+    "    m2next = lambda year,mov: [1,0.5,0.25,0.08,0.03,0.01,0.01,0.01,0.01,0.01][year]*mov \n",
+    "\n",
+    "    # turn draft picks into specific predictions\n",
+    "    draft_picks = [ (yr,m2pos(m2next(yr,mov))+teamNum*(rnd-1)) for rnd,yr,mov in team['d']]\n",
+    "    \n",
+    "    pars = defaultdict(list) # player value\n",
+    "    tss = defaultdict(int)  # contracts\n",
+    "    dpars = [] # draft value\n",
+    "\n",
+    "    # analyze existing contracts\n",
+    "    for age,ovr,con,yrl in team['p']:\n",
+    "        ovr2  = ovr\n",
+    "        povrs = [ovr2]\n",
+    "        \n",
+    "        # compute aging value\n",
+    "        for i in range(max(YEARS_TO_MODEL,yrl)):\n",
+    "            ovr2+=age_shift.get(age+i,max_shift)\n",
+    "            povrs.append(ovr2)\n",
+    "            \n",
+    "        # this is pretty good +/-\n",
+    "        pmovs = [o2m[int(np.clip(np.round(ovr2),0,100))] for ovr2 in povrs]\n",
+    "        # this is ... okay estimate of fair contract\n",
+    "        # assumption: max contract is 1/3 salary cap\n",
+    "        ccont = [(sCap/3)*min(1,(pmov-r_lvl)/sA) for pmov in pmovs]\n",
+    "        # how much value do we get each contract year\n",
+    "        cvals = [c-con for c in ccont]\n",
+    "\n",
+    "        # add existing contract\n",
+    "        for i in range(yrl+1):\n",
+    "            pars[i].append(povrs[i])\n",
+    "            tss[i] += con\n",
+    "            \n",
+    "        # extend contract (at fair price)\n",
+    "        if yrl+1 < YEARS_TO_MODEL:\n",
+    "            prev_val = eval_state(pars,tss,sCap,minS)\n",
+    "\n",
+    "            tss2 = copy.deepcopy(tss)\n",
+    "            pars2 = copy.deepcopy(pars)\n",
+    "\n",
+    "            for i in range(yrl+1,YEARS_TO_MODEL):\n",
+    "                pars2[i].append(povrs[i])\n",
+    "                tss2[i] += ccont[i]\n",
+    "                \n",
+    "            # only if extending is the right thing\n",
+    "            if eval_state(pars2,tss2,sCap,minS) > prev_val:\n",
+    "                pars = pars2\n",
+    "                tss = tss2\n",
+    "        \n",
+    "        # add excess value into 3 years\n",
+    "        if yrl+1 > YEARS_TO_MODEL:\n",
+    "            amount_to_add = sum(cvals[YEARS_TO_MODEL:])/YEARS_TO_MODEL\n",
+    "            for i  in range(YEARS_TO_MODEL):\n",
+    "                tss[i] -= amount_to_add\n",
+    "    \n",
+    "    # compute draft pick value\n",
+    "    for yr,p in draft_picks:\n",
+    "        dpars.append((0.95**yr)*draftP[1]*np.exp(-draftP[0]*p**draftP[2]))\n",
+    "    \n",
+    "    # add young player value into long-term estimate\n",
+    "    for age,ovr,con,yrl in team['p']:\n",
+    "        dpars.append(age_shift_int[age]*winp_draft(ovr,ovr,age))\n",
+    "\n",
+    "    value = eval_state(pars,tss,sCap,minS)\n",
     "    #print(pred_movs,win_p,sum(value),sum(dpars))\n",
     "    return sum(value) + sum(dpars)\n",
     "get_team_value(team,90000,750)"
