predict a round 1 victory, directly from values.

--- a/trade_models-3.ipynb
+++ b/trade_models-3.ipynb
@@ -147,7 +147,7 @@
     "    for season in team['seasons']:\n",
     "        s = season['season']\n",
     "        if season['gp'] >= 82:\n",
-    "            they_won = float(season['playoffRoundsWon'] >= 3) # not really finals -- 4\n",
+    "            they_won = float(season['playoffRoundsWon'] >= 1) # not really finals -- 4\n",
     "            won_cup[(tid,s)] = they_won\n",
     "            \n",
     "            season_ratings[s].append((season['won'],team_movs[(tid,s)]))\n",
@@ -650,6 +650,9 @@
     "Xs = defaultdict(list)\n",
     "ys = defaultdict(list)\n",
     "\n",
+    "PV = defaultdict(list)\n",
+    "WC = defaultdict(list)\n",
+    "\n",
     "for tid, s in team_movs:\n",
     "    if s in valid_seasons:\n",
     "        itmov = team_movs[(tid,s)]\n",
@@ -684,8 +687,10 @@
     "            diff = (90000-cap_hit)/90000\n",
     "            cap_space = np.maximum(diff,0.1*diff)\n",
     "            \n",
-    "            Xs[i].append([cap_space,play_s,])\n",
-    "            ys[i].append(tmov)\n"
+    "            Xs[i].append([cap_space])\n",
+    "            PV[i].append(play_s)\n",
+    "            ys[i].append(tmov-play_s)\n",
+    "            WC[i].append(won_cup[(tid,s+i)])\n"
    ]
   },
   {
@@ -721,15 +726,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import r2_score\n",
+    "\n",
     "np.set_printoptions(suppress=True)\n",
     "scales=[]\n",
-    "rsq = [] \n",
+    "means = []\n",
+    "rsq = []\n",
+    "llf = []\n",
+    "plt.figure(figsize=(9,3))\n",
     "for i in range(YEARS_TO_MODEL):\n",
-    "    pred = sm.OLS(ys[i],(Xs[i])).fit()\n",
-    "    scales.append(np.std(ys[i])/np.std(pred.predict()))\n",
-    "    rsq.append(pred.rsquared)\n",
-    "    print(i,\": (\",list(np.round(pred.params,3)),',', np.round(scales[-1],2),'),')\n",
-    "rsq"
+    "    pred = sm.OLS(ys[i],sm.add_constant(Xs[i])).fit()\n",
+    "    #if i > 0:\n",
+    "    #    pred.params[0]*=0.8\n",
+    "    \n",
+    "    play_v = np.array(PV[i])\n",
+    "    pred_y = pred.predict()+play_v\n",
+    "    true_y = np.array(ys[i])+play_v\n",
+    "    \n",
+    "\n",
+    "    rsq.append(r2_score(true_y,pred_y))\n",
+    "    \n",
+    "    plt.subplot(1,3,i+1)\n",
+    "    plt.title('predicted finals% \\n year {}'.format(i))\n",
+    "    \n",
+    "    ALT = np.hstack([np.array(Xs[i]),np.array(PV[i])[:,None]])\n",
+    "    \n",
+    "    predWC = sm.Logit(WC[i],sm.add_constant(ALT)).fit(disp=0)\n",
+    "    llf.append(predWC.llf)\n",
+    "    #xp = np.linspace(-15,15)\n",
+    "    #tmp = predWC.params[0]  + predWC.params[1]*xp\n",
+    "    #yp = 1/(1+np.exp(-tmp))\n",
+    "    plt.ylim(-0.1,1)\n",
+    "    #plt.xlabel('pred MOV')\n",
+    "    #plt.plot(xp,yp)\n",
+    "    plt.scatter(true_y,predWC.predict(),s=5,alpha=0.5)\n",
+    "    predWC.summary()\n",
+    "    #print(i,\": (\",list(np.round(pred.params,3)) + list(np.round(predWC.params,3)),'),')\n",
+    "    print(i,\": (\",list(np.round(predWC.params,3)),'),')\n",
+    "\n",
+    "    \n",
+    "rsq,llf"
    ]
   },
   {
@@ -738,7 +774,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[0.6729047387737562, 0.3342707498346743, 0.12338779843176773]"
+    "([0.6757477869818362, 0.3083634928116792, 0.01437917028965785],\n",
+    " [-2034.1336081248485, -2365.65920533194, -2620.361136131529])"
    ]
   },
   {
@@ -756,7 +793,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred.summary()"
+    "predWC.summary()"
    ]
   },
   {
@@ -795,15 +832,6 @@
    "outputs": [],
    "source": [
     "np.std(np.array(Xs[1]),axis=0),np.mean(np.array(Xs[1]),axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(np.array(Xs[0])[:,1])"
    ]
   },
   {
