--- a/trade_prototype-3.ipynb
+++ b/trade_prototype-3.ipynb
@@ -61,9 +61,24 @@
     "\n",
     "# expected mov, weight for players, weight for salary cap space\n",
     "weights = {\n",
-    "0 : ( [0, 0.99] , 1.22 ),\n",
-    "1 : ( [10.559, 0.753] , 1.74 ),\n",
-    "2 : ( [9.07, 0.476] , 2.92 ),\n",
+    "0 : ( [-0.25, 0.146, -3.696, 0.497] ),\n",
+    "1 : ( [0.599, 12.906, -3.188, 0.366] ),\n",
+    "2 : ( [1.447, 16.979, -2.844, 0.228] ),\n",
+    "}\n",
+    "\n",
+    "# >= 3\n",
+    "weights = {\n",
+    "0 : ( [-3.776, -1.203, 0.491] ),\n",
+    "1 : ( [-2.865, 4.089, 0.359] ),\n",
+    "2 : ( [-2.207, 2.716, 0.215] ),\n",
+    "}\n",
+    "\n",
+    "# win a round\n",
+    "weights = {\n",
+    "0 : ( [-1.591, -0.708, 0.497] ),\n",
+    "1 : ( [-0.898, 3.266, 0.304] ),\n",
+    "2 : ( [-0.543, 2.346, 0.184] ),\n",
+    "\n",
     "}\n",
     "\n",
     "# draft value\n",
@@ -77,8 +92,7 @@
     "team_mov = [ -0.20384938,   0.3719406,  101.37586688]\n",
     "\n",
     "# salary multiplier\n",
-    "sA = 4.020403849764475\n",
-    "#sA -= 1.5 # discount it"
+    "sA = 4.020403849764475"
    ]
   },
   {
@@ -102,21 +116,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "team = { 'p' : [(22,66,22000,0),(22,66,22000,1),(22,66,22000,2),(22,66,22000,3)], #(age,ovr,salary,years_left)\n",
     "         'd' : [(1, 0, 8.6),(1, 0, -5.35),(2,0,3),(1,1,3),(2,1,3),(1,2,3),(2,2,3),(1,3,3),(2,3,3),(1,4,3),(2,4,3)] #(round,years_left,team_MOV)\n",
     "       }\n",
     "YEARS_TO_MODEL = 3\n",
+    "DISCOUNT = 1.0 # how much of a hometown discount do players get\n",
+    "                # otherwise bad teams give up good players in trades too easy\n",
+    "                # because they think they'll want an absurd contract & prefer some value\n",
     "\n",
     "def eval_state(pars,tss,sCap,minS):\n",
-    "    pred_movs = []\n",
+    "    pred_win_p = []\n",
     "    for i in range(YEARS_TO_MODEL):\n",
     "        play = [p for p in pars[i] if p >= RL]\n",
     "        lp = len(play)\n",
@@ -131,17 +141,18 @@
     "        cap_space = np.maximum(diff,0.1*diff)\n",
     "        x = weights.get(i,weights[2])\n",
     "\n",
-    "        p_mov = x[1] * (x[0][0] * cap_space + x[0][1] * play_s)\n",
-    "        pred_movs.append(p_mov)\n",
-    "        #print(i,play_s,cap_space)\n",
+    "        #p_mov = play_s + (x[0] + x[1]*cap_space)\n",
+    "        #win_p = 1.0/(1+np.exp(-(p_mov*x[3]+x[2])))\n",
+    "        \n",
+    "        ppow = x[0] + x[1]*cap_space + x[2]*play_s\n",
+    "        win_p = 1.0/(1+np.exp(-ppow))\n",
     "\n",
-    "    cA,cB = (.47854580217902276, -4.016030120527145)\n",
-    "\n",
-    "    win_p = [1.0/(1+np.exp(-mov*cA -cB)) for mov in pred_movs]\n",
+    "        \n",
+    "        pred_win_p.append(win_p)\n",
     "\n",
     "    # discount factor for the future, more uncertainty, less sure reward\n",
-    "    value = [wp*(0.95**(i)) for i,wp in enumerate(win_p)]\n",
-    "    return value\n",
+    "    #value = [wp*(0.9**(i)) for i,wp in enumerate(win_p)]\n",
+    "    return pred_win_p\n",
     "\n",
     "\n",
     "def get_team_value(team,sCap=90000,minS=750,teamNum=30):\n",
@@ -189,7 +200,7 @@
     "\n",
     "            for i in range(yrl+1,YEARS_TO_MODEL):\n",
     "                pars2[i].append(povrs[i])\n",
-    "                tss2[i] += ccont[i]\n",
+    "                tss2[i] += max(DISCOUNT*ccont[i],minS)\n",
     "                \n",
     "            # only if extending is the right thing\n",
     "            if eval_state(pars2,tss2,sCap,minS) > prev_val:\n",
@@ -222,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = json.load(open('real_2020.json','rt',encoding='utf-8-sig'))\n",
+    "data = json.load(open('alexnoob.json','rt',encoding='utf-8-sig')) #real_2020\n",
     "gA = {_['key']:_['value'] for _ in data['gameAttributes']}"
    ]
   },
@@ -476,10 +487,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "team_test = {'mov':team_movs[7],'d':team_picks[7],'p':team_players[7]}\n",
-    "get_team_value(team_test,sCap,minS)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -498,8 +506,11 @@
    "outputs": [],
    "source": [
     "team_test = {'mov':team_movs[29],'d':team_picks[29],'p':team_players[29]}\n",
+    "get_team_value(team_test,sCap,minS)\n",
     "\n",
-    "get_team_value(team_test,sCap,minS)\n"
+    "\n",
+    "team_test = {'mov':team_movs[3],'d':team_picks[3],'p':team_players[3]}\n",
+    "get_team_value(team_test,sCap,minS)"
    ]
   },
   {
@@ -508,40 +519,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_test ={'mov': -7.647603332074514,\n",
-    " 'd': [(2, 0, -0.6651492516752459),\n",
-    "  (1, 0, -7.647603332074514),\n",
-    "  (2, 0, -5.076082713949978),\n",
-    "  (2, 1, -0.6651492516752459),\n",
-    "  (1, 1, -7.647603332074514),\n",
-    "  (2, 1, 10.026649251671481),\n",
-    "  (1, 2, -7.647603332074514),\n",
-    "  (2, 2, -7.647603332074514),\n",
-    "  (1, 3, -7.647603332074514),\n",
-    "  (1, 4, -7.647603332074514),\n",
-    "  (2, 4, -7.647603332074514),\n",
-    "  (1, 5, -7.647603332074514),\n",
-    "  (2, 5, -7.647603332074514),\n",
-    "  (1, 6, -7.647603332074514),\n",
-    "  (2, 6, -7.647603332074514)],\n",
-    " 'p': [(25, 52, 1500, 2),\n",
-    "  (26, 54, 18900, 2),\n",
-    "  (28, 52, 14000, 1),\n",
-    "  (28, 33, 17000, 0),\n",
-    "  (22, 54, 4450, 3),\n",
-    "  (25, 26, 1650, 2),\n",
-    "  (23, 31, 900, 0),\n",
-    "  (22, 29, 1750, 3),\n",
-    "  (22, 52, 4100, 2),\n",
-    "  (25, 40, 1350, 1),\n",
-    "  (25, 22, 160, 0),\n",
-    "  (32, 43, 24000, 1),\n",
-    "  (22, 47, 3950, 1),\n",
-    "  (26, 39, 1500, 0),\n",
-    "  (23, 26, 900, 1),\n",
-    "  (25, 43, 1500, 0)]}\n",
+    "team_test ={'mov': -2.97562361535948,\n",
+    " 'd': [(2, 0, 3.1711893144802534),\n",
+    "  (1, 0, -2.97562361535948),\n",
+    "  (2, 0, -1.0163612554249681),\n",
+    "  (2, 1, 3.1711893144802534),\n",
+    "  (1, 1, -2.97562361535948),\n",
+    "  (2, 1, 14.450161462168422),\n",
+    "  (1, 2, -2.97562361535948),\n",
+    "  (2, 2, -2.97562361535948),\n",
+    "  (1, 3, -2.97562361535948),\n",
+    "  (1, 4, -2.97562361535948),\n",
+    "  (2, 4, -2.97562361535948),\n",
+    "  (1, 5, -2.97562361535948),\n",
+    "  (2, 5, -2.97562361535948),\n",
+    "  (1, 6, -2.97562361535948),\n",
+    "  (2, 6, -2.97562361535948)],\n",
+    " 'p': [(24, 55, 1200, 2),\n",
+    "  (26, 56, 19900, 2),\n",
+    "  (27, 55, 14500, 1),\n",
+    "  (27, 44, 17000, 0),\n",
+    "  (21, 56, 3800, 3),\n",
+    "  (24, 38, 900, 0),\n",
+    "  (23, 43, 900, 0),\n",
+    "  (22, 42, 900, 1),\n",
+    "  (22, 55, 3750, 2),\n",
+    "  (25, 55, 1400, 3),\n",
+    "  (24, 34, 900, 0),\n",
+    "  (31, 50, 25550, 1),\n",
+    "  (22, 53, 4030, 1),\n",
+    "  (26, 48, 1550, 0),\n",
+    "  (22, 38, 900, 0),\n",
+    "  (24, 51, 1600, 0)]}\n",
     "get_team_value(team_test,sCap,minS)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
