--- a/trade_models-3.ipynb
+++ b/trade_models-3.ipynb
@@ -41,6 +41,8 @@
     "full_contracts =  {}\n",
     "player_teams = {}\n",
     "draft_picks = defaultdict(list)\n",
+    "draft_picks_avg_ovr = defaultdict(list)\n",
+    "draft_picks_avg_age = defaultdict(list)\n",
     "player_draft_ageovr = {}\n",
     "draft_salaries = {}\n",
     "\n",
@@ -59,6 +61,9 @@
     "        draft_pos_avg[p['pid']] = dp\n",
     "    if p['ratings'][0]['season'] ==  p['draft']['year']:\n",
     "        player_draft_ageovr[p['pid']] = (p['draft']['ovr'],p['draft']['pot'],p['draft']['year']-p['born']['year'])\n",
+    "        draft_picks_avg_ovr[dp].append(p['draft']['ovr'])\n",
+    "        draft_picks_avg_age[dp].append(p['draft']['year']-p['born']['year'])\n",
+    "\n",
     "    for r in p['ratings']:\n",
     "        player_seasons[p['pid']] += 1\n",
     "        player_ratings[(p['pid'],r['season'])] ={k:v for k,v in r.items() if type(v) == int and k != 'season'}\n",
@@ -107,6 +112,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dp_ovr = np.array(sorted([(k,np.mean(v)) for k,v in draft_picks_avg_ovr.items()]))[1:,1]\n",
+    "\n",
+    "WEG = np.ones(60)\n",
+    "WEG[:15] = 4\n",
+    "def best_fit_func_exp(x):\n",
+    "    return np.linalg.norm(( WEG*(np.exp(x[0]*np.arange(60))*x[1]-x[2] - dp_ovr)))\n",
+    "res2 = opt.minimize(best_fit_func_exp,[-0.05,22,-16],method='Nelder-Mead')\n",
+    "dp_ovr_x = res2.x\n",
+    "\n",
+    "plt.plot(dp_ovr)\n",
+    "plt.plot(np.exp(dp_ovr_x[0]*np.arange(60))*dp_ovr_x[1]-dp_ovr_x[2])\n",
+    "\n",
+    "dp_ovr_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.hist(replacement_ovrs)\n",
     "RL = np.mean(replacement_ovrs)\n",
     "RL"
@@ -147,7 +173,7 @@
     "    for season in team['seasons']:\n",
     "        s = season['season']\n",
     "        if season['gp'] >= 82:\n",
-    "            they_won = float(season['playoffRoundsWon'] >= 1) # not really finals -- 4\n",
+    "            they_won = float(season['playoffRoundsWon'] >= 2) # not really finals -- 4\n",
     "            won_cup[(tid,s)] = they_won\n",
     "            \n",
     "            season_ratings[s].append((season['won'],team_movs[(tid,s)]))\n",
@@ -775,7 +801,7 @@
    "outputs": [],
    "source": [
     "([0.6757477869818362, 0.3083634928116792, 0.01437917028965785],\n",
-    " [-2034.1336081248485, -2365.65920533194, -2620.361136131529])"
+    " [-4747.731037214772, -5712.5968800561295, -6204.439761785761])"
    ]
   },
   {
