--- a/trade_prototype-3.ipynb
+++ b/trade_prototype-3.ipynb
@@ -81,12 +81,12 @@
     "\n",
     "}\n",
     "\n",
-    "# draft value\n",
+    "# draft value. (1) is pos -> %, (2) ovr,pot,age -> %, (3) pos -> ovr\n",
     "draftP = np.array([0.27988742, 0.30226007, 0.62866095])\n",
     "def winp_draft(ovr,pot,age):\n",
     "    xv = 4.3341 + ovr*0.1294 + pot*0.0343 + age*(-0.7099)\n",
     "    return 1/(1+np.exp(-xv))\n",
-    "\n",
+    "draftOVR= np.array([ -0.07936123,  21.17839312, -28.19483771])\n",
     "\n",
     "# team value\n",
     "team_mov = [ -0.20384938,   0.3719406,  101.37586688]\n",
@@ -217,6 +217,15 @@
     "    for yr,p in draft_picks:\n",
     "        dpars.append((0.95**yr)*draftP[1]*np.exp(-draftP[0]*p**draftP[2]))\n",
     "    \n",
+    "    # add draft picks to roster\n",
+    "    # make them zero cost\n",
+    "    for yr,p in draft_picks:\n",
+    "        if yr+1 < YEARS_TO_MODEL:\n",
+    "            ovr = np.exp(draftOVR[0]*p)*draftOVR[1]-draftOVR[2]\n",
+    "            for i in range(yr+1,YEARS_TO_MODEL):\n",
+    "                ovr = ovr + age_shift[20-(yr+1)+i]\n",
+    "                pars[i].append(ovr)\n",
+    "    \n",
     "    # add young player value into long-term estimate\n",
     "    for age,ovr,con,yrl in team['p']:\n",
     "        dpars.append(age_shift_int[age]*winp_draft(ovr,ovr,age))\n",
@@ -233,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = json.load(open('alexnoob.json','rt',encoding='utf-8-sig')) #real_2020\n",
+    "data = json.load(open('real_2020.json','rt',encoding='utf-8-sig')) #real_2020\n",
     "gA = {_['key']:_['value'] for _ in data['gameAttributes']}"
    ]
   },
